<resources>
    <string name="app_name">Collector 5G</string>
    <string name="switch_to_start_stop_service">Switch to start/stop service</string>
    <string name="start_stop_service">Start/stop service</string>
    <string name="location">Location:</string>
    <string name="string_location" />
    <string name="start">Start</string>
    <string name="accelerometer_z">Accelerometer z</string>
    <string name="gyroscope_data">Gyroscope data:</string>
    <string name="accelerometer_data">Accelerometer data: </string>
    <string name="gyroscope_z">Gyroscope z</string>
    <string name="gyroscope_y">Gyroscope y</string>
    <string name="gyroscope_x">Gyroscope x</string>
    <string name="accelerometer_y">Accelerometer y</string>
    <string name="accelerometer_x">Accelerometer x</string>
    <string name="battery_level">Battery level</string>
    <string name="device_manufacturer">Device manufacturer</string>
    <string name="device_model">Device model</string>
    <string name="android_version">Android version</string>
    <string name="stop">Stop</string>
</resources>